--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-get-random-values": "^1.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/uuid": "^9.0.7",
     "typescript": "^5.1.3"
   },
   "private": true
